# Bode

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/annotations/: AnnotationLayer.tsx  useAnnotations.ts
src/components/: AnnotationBar.tsx  CommandPalette.tsx  PasswordPrompt.tsx  SearchBar.tsx  Sidebar.tsx  SignaturePad.tsx  TabBar.tsx  Toolbar.tsx  icons.tsx
src/markdown/: MarkdownView.tsx  renderMarkdown.ts
src/pdf/: LinkLayer.tsx  PdfPage.tsx  PdfViewer.tsx  exportPdf.ts  pdfWorker.ts  search.ts  usePdfDocument.ts
src/platform/: files.ts  window.ts
src/settings/: SettingsPanel.tsx  themes.ts  useSettings.ts
src/store/: viewerStore.ts
src/styles/: index.css  themes.css
