[package]
name = "bode"
version = "0.1.0"
description = "A clean, lightweight, customizable PDF viewer"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
# The library is built as a cdylib for mobile and a staticlib/rlib for desktop.
name = "bode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[profile.release]
# Optimize for a small, fast binary — the whole point of choosing Tauri.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
